[gd_scene load_steps=2 format=3 uid="uid://c7result01"]

[ext_resource type="Script" path="res://scripts/result/game_result.gd" id="1_result"]

[node name="GameResult" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_result")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "ゲーム結果"
horizontal_alignment = 1

[node name="MyResultLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="Sep" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultList" type="VBoxContainer" parent="Margin/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 70)
text = "ロビーに戻る"
